welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: value EST
	setDirection(EST)
                     ^PatternPicture:20: error: not found: value EST
	setDirection(EST)
                     ^PatternPicture:24: error: not found: value OUEST
	setDirection(OUEST)
                     ^PatternPicture:34: error: not found: value avanec
	avanec()
        ^PatternPicture:35: error: not found: value OUEST
	setDirection(OUEST)
                     ^PatternPicture:51: error: not found: value EST
	setDirection(EST)
                     ^